--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@supabase/supabase-js": "^2.55.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "prisma": "^6.14.0",
